# unibar

./: .clang-format  .luarc.json  README.md  config.lua  default.lua  meson.build
core/: _system.lua  config.lua  init.lua
src/: main.c
types/: system.lua
